--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Envify - Gerenciador de ambientes",
+  "name": "Envify - Your favorite enviroment manager.",
   "version": "0.0.1",
-  "description": "Cadastre e identifique rapidamente os ambientes do seu site",
+  "description": "Create, manage, and identify your site's environments quickly.",
   "action": {
     "default_title": "Envify",
     "default_popup": "dist/index.html",
@@ -19,7 +19,8 @@
     "activeTab",
     "storage",
     "scripting",
-    "tabs"
+    "tabs",
+    "contextMenus"
   ],
   "content_scripts": [
     {
