--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.14",
     "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
     "postcss": "^8.4.24",
     "postcss-loader": "^7.3.2",
