add migration on update from old structure to grouped urls by app

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Envify - Your favorite enviroment manager.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Create, manage, and identify your site's environments quickly.",
   "action": {
     "default_title": "Envify",
@@ -19,13 +19,12 @@
     "activeTab",
     "storage",
     "scripting",
-    "tabs",
-    "contextMenus"
+    "tabs"
   ],
   "content_scripts": [
     {
       "css": [
-        "app/public/markup.css"
+        "dist/markup.css"
       ],
       "matches": [
         "<all_urls>"
